--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "core-js": "^2.5.3",
     "orbit-controls-es6": "^1.0.10",
     "rxjs": "^5.5.6",
+    "three": "^0.89.0",
+    "three-react-obj-loader": "^1.0.4",
     "zone.js": "^0.8.20"
   },
   "devDependencies": {
@@ -44,7 +46,6 @@
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.2.2",
-    "three": "^0.89.0",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
     "typescript": "~2.6.2"
