--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "orbit-controls-es6": "^1.0.10",
     "rxjs": "^5.5.6",
     "three": "^0.89.0",
+    "three-react-mtl-loader": "^1.0.3",
     "three-react-obj-loader": "^1.0.4",
     "zone.js": "^0.8.20"
   },
